# PG100G-Build

./: README.md  Start  build.bat  build.sh  pyproject.toml  requirements.txt
ExtraSources/: plugins_loader.py
ExtraSources/Adapters/: adapters.py
ExtraSources/Engines/: pygame_ui.py
ExtraSources/Experimentals/: Image_Generador.py
ExtraSources/Plugins/: debug_plugin.py
ExtraSources/Tools/: compress_output.py
apps/Org/Com/Projects/: Main.py
apps/Test/: test_main.py
apps/Test/Run/: test.bat  test.sh
